removed bootsrap in index, fixed styling in assign recruiters congrats,  fixed alignemnt on create job profile page4

--- a/src/Components/Admin/CreateJobProfile/Page4/CreateJobProfilePage4.scss
+++ b/src/Components/Admin/CreateJobProfile/Page4/CreateJobProfilePage4.scss
@@ -10,15 +10,15 @@
         letter-spacing: 0.4px;
         color: #02529c;
         margin-bottom: 43px;
-        margin-left: 14vh;
-        margin-right: 14vh;
+        margin-left: 228px;
+        margin-right: 228px;
     }
 
     #formContainer {
         position: relative;
         overflow: hidden;
         border: 1px solid white;
-        margin: 14vh;
+        margin: 228px;
         margin-top: 0;
         border-radius: 8px;
         font-family: helvetica;
@@ -31,8 +31,8 @@
         align-items: center;
     }
     .navbar{
-        margin-left: 14vh;
-        margin-right: 14vh;
+        margin-left: 228px;
+        margin-right: 228px;
     }
     .links{
         width: 592px;
